--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "pasfce-rust",
-  "version": "1.0.0",
-  "description": "my new app",
-  "main": "index.js",
-  "scripts": {
-    "watch": "npx tailwindcss -i ./input.css -o ./style/output.css --watch"
-  },
-  "keywords": [],
-  "license": "ISC",
-  "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41"
-  },
   "devDependencies": {
-    "tailwindcss": "^3.4.9"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
