wrote input and button components

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,11 @@ tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 simple_logger = "4"
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.92"
+wasm-bindgen = "^0.2.93"
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
 http = "1"
+web-sys= "0.3.70"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -73,6 +74,7 @@ tailwind-input-file = "input.css"
 # Optional, defaults to "tailwind.config.js" which if is not present
 # is generated for you
 tailwind-config-file = "tailwind.config.js"
+
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
 #
